<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_margin="2pt"
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
           />

        <TextView
            android:textStyle="bold"
            android:textSize="10pt"
            android:layout_margin="15pt"
            android:id="@+id/indiv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textAlignment="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            >
            <TableRow android:layout_margin="5pt">
                <TextView
                    android:text="@string/Age"
                   />
                <TextView
                    android:id="@+id/Age"
                    android:layout_gravity="right"
                    android:text="dzadzadza"
                     />
            </TableRow>

            <TableRow android:layout_margin="5pt">
                <TextView
                    android:text="@string/Hair"
                    />
                <TextView
                    android:id="@+id/Hair"
                    />
            </TableRow>

            <TableRow android:layout_margin="5pt">
                <TextView
                    android:id="@+id/Height"
                    android:text="@string/Height"
                   />
            </TableRow>

            <TableRow android:layout_margin="5pt">
                <TextView
                    android:id="@+id/Weight"
                    android:text="@string/Weight"
                 />
            </TableRow>

            <TableRow android:layout_margin="5pt">
                <TextView
                    android:id="@+id/Sex"
                    android:text="@string/Sex"
                   />
            </TableRow>

            <TableRow android:layout_margin="5pt">
                <TextView
                    android:id="@+id/Race"
                    android:text="@string/Race"
                 />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:layout_marginEnd="2pt"
            android:layout_marginStart="5pt"
            android:text="@string/Remark"
            android:textSize="10pt"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"
            android:layout_marginEnd="2pt"
            android:layout_marginStart="5pt"
            android:text="@string/Details"
            android:textSize="10pt"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@mipmap/call_icon"
            android:layout_margin="16dp"
            android:contentDescription="TODO" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/messageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@mipmap/email_1"
        android:contentDescription="TODO" />

</LinearLayout>
